[package]
name = "bench-var-u64"
version = "0.1.0"
authors = ["qupeng <qupeng@pingcap.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tikv_util]
path = "/home/qupeng/github.com/pingcap/tikv/components/tikv_util"

